router changes to make it work with dynoyarn and some bug fixes