@@ -1,181 +1,97 @@
 #
-# Licensed to the Apache Software Foundation (ASF) under one or more
-# contributor license agreements.  See the NOTICE file distributed with
-# this work for additional information regarding copyright ownership.
-# The ASF licenses this file to You under the Apache License, Version 2.0
-# (the "License"); you may not use this file except in compliance with
-# the License.  You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-
-##
-## THIS FILE ACTS AS AN OVERRIDE FOR hadoop-env.sh FOR ALL
-## WORK DONE BY THE yarn AND RELATED COMMANDS.
-##
-## Precedence rules:
-##
-## yarn-env.sh > hadoop-env.sh > hard-coded defaults
-##
-## YARN_xyz > HADOOP_xyz > hard-coded defaults
-##
-
-###
-# Resource Manager specific parameters
-###
-
-# Specify the max heapsize for the ResourceManager.  If no units are
-# given, it will be assumed to be in MB.
-# This value will be overridden by an Xmx setting specified in either
-# HADOOP_OPTS and/or YARN_RESOURCEMANAGER_OPTS.
-# Default is the same as HADOOP_HEAPSIZE_MAX
-#export YARN_RESOURCEMANAGER_HEAPSIZE=
-
-# Specify the JVM options to be used when starting the ResourceManager.
-# These options will be appended to the options specified as HADOOP_OPTS
-# and therefore may override any similar flags set in HADOOP_OPTS
-#
-# Examples for a Sun/Oracle JDK:
-# a) override the appsummary log file:
-# export YARN_RESOURCEMANAGER_OPTS="-Dyarn.server.resourcemanager.appsummary.log.file=rm-appsummary.log -Dyarn.server.resourcemanager.appsummary.logger=INFO,RMSUMMARY"
-#
-# b) Set JMX options
-# export YARN_RESOURCEMANAGER_OPTS="-Dcom.sun.management.jmxremote=true -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.port=1026"
-#
-# c) Set garbage collection logs from hadoop-env.sh
-# export YARN_RESOURCE_MANAGER_OPTS="${HADOOP_GC_SETTINGS} -Xloggc:${HADOOP_LOG_DIR}/gc-rm.log-$(date +'%Y%m%d%H%M')"
-#
-# d) ... or set them directly
-# export YARN_RESOURCEMANAGER_OPTS="-verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintGCDateStamps -Xloggc:${HADOOP_LOG_DIR}/gc-rm.log-$(date +'%Y%m%d%H%M')"
-#
-# e) Enable ResourceManager audit logging
-# export YARN_RESOURCEMANAGER_OPTS="-Drm.audit.logger=INFO,RMAUDIT"
+# #
+# AUTO-GENERATED, please try not to change it
+# Time:  2021-12-14_05:52:53UTC
+# Build: https://ltx1-jenkins.grid.linkedin.com:8443/job/hadoop-sre/job/grid-conf_batch-build/57/
+# JIRA:  GRID-89384
 #
 #
-# export YARN_RESOURCEMANAGER_OPTS=
 
-###
-# Node Manager specific parameters
-###
+# Set JAVA_HOME
+export JAVA_HOME=/usr/java/default
+export PATH=$JAVA_HOME/bin:$PATH # just to be extra sure
 
-# Specify the max heapsize for the NodeManager.  If no units are
-# given, it will be assumed to be in MB.
-# This value will be overridden by an Xmx setting specified in either
-# HADOOP_OPTS and/or YARN_NODEMANAGER_OPTS.
-# Default is the same as HADOOP_HEAPSIZE_MAX.
-#export YARN_NODEMANAGER_HEAPSIZE=
+# User for YARN daemons
+export HADOOP_YARN_USER=${HADOOP_YARN_USER:-yarn}
 
-# Specify the JVM options to be used when starting the NodeManager.
-# These options will be appended to the options specified as HADOOP_OPTS
-# and therefore may override any similar flags set in HADOOP_OPTS
+# resolve links - $0 may be a softlink
+export YARN_CONF_DIR="${YARN_CONF_DIR:-$HADOOP_YARN_HOME/conf}"
+
+# log dir
+export YARN_LOG_DIR="${YARN_LOG_DIR:=/export/apps/hadoop/logs}"
+
+# Heap dump path
+export NODEMANAGER_HEAP_DUMP_PATH="/export/home/yarn/nodemanager-heapdump.bin"
+export NODEMANAGER_ERROR_FILE="/export/home/yarn/nodemanager.jvm.err"
+
+# For setting YARN specific HEAP sizes please use this
+# Parameter and set appropriately
+YARN_HEAPSIZE=1024
+
+# check envvars which might override default args
+if [ "$YARN_HEAPSIZE" != "" ]; then
+  JAVA_HEAP_MAX="-Xmx""$YARN_HEAPSIZE""m"
+fi
+
+# GC and JMX
+export HADOOP_GENERIC_GCFLAGS="-verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintGCDateStamps -XX:+ParallelRefProcEnabled"
+export HADOOP_BIG_GCFLAGS="-XX:ParallelGCThreads=12 -XX:+UseConcMarkSweepGC -XX:NewSize=5G -XX:MaxNewSize=5G -XX:CMSInitiatingOccupancyFraction=84 -XX:+UseCMSInitiatingOccupancyOnly -XX:+PrintTenuringDistribution -XX:+PrintGCApplicationStoppedTime"
+export HADOOP_GENERIC_JMXFLAGS="-Dcom.sun.management.jmxremote=false -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false"
+
+# Clients
+export YARN_CLIENT_OPTS="-Xmx128m $YARN_CLIENT_OPTS"
+
+# GRID-3943: changes for spark external shuffle jar location
+if [ -d /export/apps/hadoop/nodemanager/site/sparklib ]; then
+    export YARN_USER_CLASSPATH="/export/apps/hadoop/nodemanager/site/sparklib/*"
+fi
+
 #
-# a) Enable NodeManager audit logging
-# export YARN_NODEMANAGER_OPTS="-Dnm.audit.logger=INFO,NMAUDIT"
+# Resource Manager
 #
-# See ResourceManager for some examples
+YARN_RESOURCEMANAGER_OPTS="-Xmx31g -Xms31g -Dyarn.server.resourcemanager.appsummary.log.file=rm-appsummary.log -Dyarn.server.resourcemanager.appsummary.logger=INFO,HRMSUMMARY -Dyarn.server.resourcemanager.preemption.logger=DEBUG,preemption -Dyarn.server.resourcemanager.elasticity.logger=INFO,elasticity -Xloggc:${YARN_LOG_DIR}/gc-rm.log-$(date +'%Y%m%d%H%M') -Dhadoop.root.logger=INFO,HRFA -Dyarn.root.logger=INFO,HRFA -Dyarn.server.resourcemanager.containersummary.log.file=rm-containersummary.log -Dyarn.server.resourcemanager.containersummary.logger=INFO,RMCONTSUMMARY ${HADOOP_GENERIC_GCFLAGS} ${HADOOP_BIG_GCFLAGS} ${HADOOP_GENERIC_JMXFLAGS}"
+
 #
-#export YARN_NODEMANAGER_OPTS=
+# Proxy Server
+YARN_PROXYSERVER_OPTS="-Xmx1g -Xloggc:${YARN_LOG_DIR}/gc-wp.log-$(date +'%Y%m%d%H%M') -Dyarn.root.logger=INFO,HRFA -Dhadoop.root.logger=INFO,HRFA ${HADOOP_GENERIC_GCFLAGS} ${HADOOP_GENERIC_JMXFLAGS}"
 
-###
-# TimeLineServer specific parameters
-###
-
-# Specify the max heapsize for the timelineserver.  If no units are
-# given, it will be assumed to be in MB.
-# This value will be overridden by an Xmx setting specified in either
-# HADOOP_OPTS and/or YARN_TIMELINESERVER_OPTS.
-# Default is the same as HADOOP_HEAPSIZE_MAX.
-#export YARN_TIMELINE_HEAPSIZE=
-
-# Specify the JVM options to be used when starting the TimeLineServer.
-# These options will be appended to the options specified as HADOOP_OPTS
-# and therefore may override any similar flags set in HADOOP_OPTS
 #
-# See ResourceManager for some examples
+# Node Manager
+
+YARN_NODEMANAGER_OPTS="-Xmx5g -Xms512m -Xloggc:${YARN_LOG_DIR}/gc-nm.log-$(date +'%Y%m%d%H%M') -Dyarn.root.logger=INFO,DRFA -Dhadoop.root.logger=INFO,DRFA ${HADOOP_GENERIC_GCFLAGS} ${HADOOP_GENERIC_JMXFLAGS} -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=${NODEMANAGER_HEAP_DUMP_PATH} -XX:ErrorFile=${NODEMANAGER_ERROR_FILE}"
+
 #
-#export YARN_TIMELINESERVER_OPTS=
+#Router
 
-###
-# TimeLineReader specific parameters
-###
+HADOOP_ROUTER_OPTS="-Xmx5g -Xms5g -Xloggc:${YARN_LOG_DIR}/gc-router.log-$(date +'%Y%m%d%H%M') ${HADOOP_GENERIC_GCFLAGS} ${HADOOP_BIG_GCFLAGS} ${HADOOP_GENERIC_JMXFLAGS}"
 
-# Specify the JVM options to be used when starting the TimeLineReader.
-# These options will be appended to the options specified as HADOOP_OPTS
-# and therefore may override any similar flags set in HADOOP_OPTS
-#
-# See ResourceManager for some examples
-#
-#export YARN_TIMELINEREADER_OPTS=
+# default log directory & file
+if [ "$YARN_LOG_DIR" = "" ]; then
+  YARN_LOG_DIR="$HADOOP_YARN_HOME/logs"
+fi
+if [ "$YARN_LOGFILE" = "" ]; then
+  YARN_LOGFILE='yarn.log'
+fi
 
-###
-# Web App Proxy Server specifc parameters
-###
+# Pid DIR
+export YARN_PID_DIR="${YARN_PID_DIR:=/export/apps/hadoop/pids}"
 
-# Specify the max heapsize for the web app proxy server.  If no units are
-# given, it will be assumed to be in MB.
-# This value will be overridden by an Xmx setting specified in either
-# HADOOP_OPTS and/or YARN_PROXYSERVER_OPTS.
-# Default is the same as HADOOP_HEAPSIZE_MAX.
-#export YARN_PROXYSERVER_HEAPSIZE=
+# default policy file for service-level authorization
+if [ "$YARN_POLICYFILE" = "" ]; then
+  YARN_POLICYFILE="hadoop-policy.xml"
+fi
 
-# Specify the JVM options to be used when starting the proxy server.
-# These options will be appended to the options specified as HADOOP_OPTS
-# and therefore may override any similar flags set in HADOOP_OPTS
-#
-# See ResourceManager for some examples
-#
-#export YARN_PROXYSERVER_OPTS=
-
-###
-# Shared Cache Manager specific parameters
-###
-# Specify the JVM options to be used when starting the
-# shared cache manager server.
-# These options will be appended to the options specified as HADOOP_OPTS
-# and therefore may override any similar flags set in HADOOP_OPTS
-#
-# See ResourceManager for some examples
-#
-#export YARN_SHAREDCACHEMANAGER_OPTS=
-
-###
-# Router specific parameters
-###
-
-# Specify the max heapsize for the Router.  If no units are
-# given, it will be assumed to be in MB.
-# Default is the same as HADOOP_HEAPSIZE_MAX
-#export YARN_ROUTER_HEAPSIZE=
-
-# Specify the JVM options to be used when starting the Router.
-# These options will be appended to the options specified as HADOOP_OPTS
-# and therefore may override any similar flags set in HADOOP_OPTS
-#
-# See ResourceManager for some examples
-#
-#export YARN_ROUTER_OPTS=
-
-###
-# Registry DNS specific parameters
-# This is deprecated and should be done in hadoop-env.sh
-###
-# For privileged registry DNS, user to run as after dropping privileges
-# This will replace the hadoop.id.str Java property in secure mode.
-# export YARN_REGISTRYDNS_SECURE_USER=yarn
-
-# Supplemental options for privileged registry DNS
-# By default, Hadoop uses jsvc which needs to know to launch a
-# server jvm.
-# export YARN_REGISTRYDNS_SECURE_EXTRA_OPTS="-jvm server"
-
-###
-# YARN Services parameters
-###
-# Directory containing service examples
-# export YARN_SERVICE_EXAMPLES_DIR = $HADOOP_YARN_HOME/share/hadoop/yarn/yarn-service-examples
-# export YARN_CONTAINER_RUNTIME_DOCKER_RUN_OVERRIDE_DISABLE=true
+YARN_OPTS="$YARN_OPTS -Dhadoop.log.dir=$YARN_LOG_DIR"
+YARN_OPTS="$YARN_OPTS -Dyarn.log.dir=$YARN_LOG_DIR"
+YARN_OPTS="$YARN_OPTS -Dhadoop.log.file=$YARN_LOGFILE"
+YARN_OPTS="$YARN_OPTS -Dyarn.log.file=$YARN_LOGFILE"
+YARN_OPTS="$YARN_OPTS -Dyarn.home.dir=$YARN_COMMON_HOME"
+YARN_OPTS="$YARN_OPTS -Dyarn.id.str=$YARN_IDENT_STRING"
+YARN_OPTS="$YARN_OPTS -Dhadoop.root.logger=${YARN_ROOT_LOGGER:-INFO,console}"
+YARN_OPTS="$YARN_OPTS -Dyarn.root.logger=${YARN_ROOT_LOGGER:-INFO,console}"
+YARN_OPTS="$YARN_OPTS -Dyarn.policy.file=$YARN_POLICYFILE"
+YARN_OPTS="$YARN_OPTS -Djava.net.preferIPv4Stack=true"
+if [ "x$JAVA_LIBRARY_PATH" != "x" ]; then
+  YARN_OPTS="$YARN_OPTS -Djava.library.path=$JAVA_LIBRARY_PATH"
+fi
+export YARN_OPTS
